tests/NormalTests/paczka1/small_fuzzy/63156068.err
Error in line 9: 7NSXCb A977 30,5
Error in line 8: A989 A989 53,3
